Add a rule to rewrite Collect to Get
We currently do the `Collect → Get` optimization eagerly when we
initially build the logical plan, but that doesn't work for queries on
derived tables or views, so this commit introduces a rule to do the same
optimization.

This is currently limited to queries where the fetch-rewrite doesn't
apply (e.g ORDER BY containing all selected columns), because the fetch
rewrite breaks Get lookups and happens eagerly.

Once we change the fetch optimization to happen in a later phase, we can
also remove the eager `Get` creation and only do it via rule.